# TAFFO

lib/Conversion/LLVMFloatToFixed/: CMakeLists.txt  ConstantConversion.cpp  Conversion.cpp  FixedPointType.cpp  InstructionConversion.cpp  LLVMFloatToFixedPass.cpp  LLVMFloatToFixedPass.h  PositBuilder.cpp  PositBuilder.h  PositConstant.cpp  PositConstant.h
lib/DataTypeAlloc/TaffoDTA/: TaffoDTA.cpp
lib/TaffoPosit/: CMakeLists.txt
test/axbench/common/makefiles/: common.mk
test/simple-test-cases/: posit-cast.c  posit-phi.c
